--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,24 @@
-p{
+.main-nav {
+    margin-top: 10px;
+    list-style: none;
+    padding-left: 0;
+    background-color: #13a4a4 ;
+}
+.main-nav__item {
+    display: inline-block;
+}
+.main-nav__item a {
+    color: white;
+    padding: 5px;
+    border-radius: 2px;
+    text-decoration: none;
+}
+.main-nav__item a:hover {
     color: blue;
-    font-size: 30px;
 }
-/* class */
-.parrafo {
-color: red;
-
+.main-nav__item a:active {
+    color: red;
 }
-
-/* ID */
-#texto {
-    color: yellow;
-    font-size: 24px;
+.main-nav__item a::after {
+    content: " | ";
 }
