--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,14 @@
-.main-nav {
-    margin-top: 10px;
-    list-style: none;
-    padding-left: 0;
-    background-color: #13a4a4 ;
+/* Se recomienda que este modelo universal vaya siempre */
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
-.main-nav__item {
-    display: inline-block;
-}
-.main-nav__item a {
-    color: white;
-    padding: 5px;
-    border-radius: 2px;
-    text-decoration: none;
-}
-.main-nav__item a:hover {
-    color: blue;
-}
-.main-nav__item a:active {
-    color: red;
-}
-.main-nav__item a::after {
-    content: " | ";
+/* El navegador toma el 20px como arriba y abajo, y el 35 
+como la derecha y la izquierda */
+main {
+    width: 100%;
+    height: 500px;
+    border: 10px solid grey;
+    padding: 20px 35px;
 }
