--- a/css/styles.css
+++ b/css/styles.css
@@ -8,25 +8,25 @@ h1 {
     font-family: serif;
     margin-bottom: 10px;
 }
-#page-title {
-    font-family: Arial, Helvetica, sans-serif;
-}
 .title {
     font-size: 18px;
     font-family: monospace;
 }
-# {
+.nav {
     margin-top: 10px;
-    list-style: none;
+    list-style-type: none;
     padding-left: 0;
 }
-#main-nav li {
+.nav li {
     display: inline-block;
 }
-#main-nav a {
+.nav a {
     color: white;
     background-color: #13a4a4;
     padding: 5px;
     border-radius: 2px;
     text-decoration: none;
+}
+.nav .blog {
+    background-color: red
 }
